<resources>
    <string name="app_name">MobiLedger</string>
    <string name="mobi_ledger">Mobi Ledger</string>
    <string name="send_mail">Send mail</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="device_offline_error_message">You are not connected to the internet.</string>
    <string name="email_id">Email Id</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password</string>
    <string name="login">Login</string>
    <string name="new_user_sign_up">New user? SIGN UP</string>
    <string name="google_icon">Google Icon</string>
    <string name="join_a_creative_solution_for_a_better_tomorrow">Join a creative solution for better tomorrow</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="signup_failed">Sign up Failed</string>
    <string name="empty_field_msg">Any field cannot be empty</string>
    <string name="single_empty_field_msg">This field cannot be empty</string>
    <string name="confirm_password_mismatched_msg">Password and Confirm password should be same</string>
    <string name="incorrect_email">Incorrect Email</string>
    <string name="incorrect_phone_no">Incorrect Phone No</string>
    <string name="password_requirement">"Password should be of size 8-20 \n" +
                        "It should contain at least a digit \n" +
                        "It should have a lower case letter and upper case letter \n" +
                        "It should have a special character"</string>
    <string name="home">Home</string>
    <string name="budget">Budget</string>
    <string name="stats">Stats</string>
    <string name="profile">Profile</string>
    <string name="back">Back</string>
    <string name="user_image">User Image</string>
    <string name="display_name">Display Name</string>
    <string name="email">Email</string>
    <string name="contact_number">Contact Number</string>
    <string name="edit">Edit \u0020 </string>
    <string name="name">Name</string>
    <string name="edit_profile">Edit Profile \u0020 </string>
    <string name="save">Save</string>
    <string name="mobile_no">Mobile No</string>
    <string name="update">Update</string>
    <string name="updated">UPDATED !!</string>
    <string name="profile_image">Profile Image</string>
    <string name="amount_rs">Amount(₹)</string>
    <string name="category">Category</string>
    <string name="add_category">Add Category</string>
    <string name="settings">Settings</string>
    <string name="contact_us">Contact Us</string>
    <string name="logout">Logout</string>
    <string name="logout_message">Are you sure, that you want to logout from the application?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="settings_cap">SETTINGS</string>
    <string name="notifications">Notifications</string>
    <string name="biometrics">Biometrics</string>
    <string name="app">APP</string>
    <string name="rate_us">Rate Us</string>
    <string name="share_with_friends">Share with Friends</string>
    <string name="change_password">Change Password</string>
    <string name="change_password_message">Send the link to change password on your email?</string>
    <string name="delete_photo">Delete \nPhoto</string>
    <string name="change_photo">Change \nPhoto</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="transaction_added">Transaction Added</string>
    <string name="expense">Expense</string>
    <string name="income">Income</string>
    <string name="saving">Saving</string>
    <string name="description">Description (Optional)</string>
    <string name="overview_report">Overview Report</string>
    <string name="add_transaction">Add transaction</string>
    <string name="latest_transaction">Latest Transactions</string>
    <string name="hello_name">Hello, %1$s</string>
    <string name="you_have_not_recorded_any_transaction_this_so_far_this_month">You have not recorded any transaction in this month so far</string>
    <string name="add_new_income_category">Add new income category</string>
    <string name="add_new_expense_category">Add new expense category</string>
    <string name="maximum_budget">Maximum \nBudget</string>
    <string name="total_budget">Total Budget</string>
    <string name="set_your_monthly_budget">Set your monthly budget</string>
    <string name="percent_of_budget_spent">Budget spent:  </string>
    <string name="set_your_budget">Set your budget</string>
    <string name="set_budget">Set Budget</string>
    <string name="field_required">Field Required</string>
    <string name="field_invalid">This field is not valid</string>
    <string name="contact_no_invalid">Invalid Contact No</string>
    <string name="email_invalid">Invalid Email</string>
    <string name="amount_invalid">Invalid Amount</string>
    <string name="category_already_exist">Category Already Exist</string>
    <string name="date">Date</string>
    <string name="add_category_budget">Add category budget</string>
    <string name="login_with">Or</string>
    <string name="income_vs_expense">Income Vs Expense</string>
    <string name="add_monthly_budget">Add Monthly Budget</string>
    <string name="monthly_statistics">Monthly Statistics</string>
    <string name="hello">Hello,</string>
    <string name="others">Others</string>
    <string name="expenses_breakup">Expenses BreakUp</string>
    <string name="income_breakup">Income BreakUp</string>
    <string name="limit">Limit</string>
    <string name="stats_detail_header">%1$s - %2$s</string>
    <string name="expense_vs_budget">Budget vs Expense</string>
    <string name="stats_detail_header_expense">You spent ₹%1$s on %2$s in %3$s</string>
    <string name="stats_detail_header_income">You earned ₹%1$s from %2$s in %3$s</string>
    <string name="monthly_analysis">Monthly Analysis</string>
    <string name="delete">Delete</string>
    <string name="no_transactions_added_for_this_month">No transactions added for this month</string>
    <string name="no_income_for_this_month">Ooops!! No Income in this month</string>
    <string name="no_expense_for_this_month">Wow!! No Expense in this month</string>
    <string name="make_budget">Make Budget</string>
    <string name="apply_template">Apply Template</string>
    <string name="see_all_transactions">See all %1$s transactions</string>
    <string name="transactions">transactions</string>
    <string name="update_budget_heading">Update %1$s Budget</string>
    <string name="budget_overflow_error">Monthly total budget exceeded your monthly limit. Enter value below ₹%1$s or increase your monthly limit.</string>
    <string name="max_limit_underflow_error">Monthly limit can\'t be lower than your total budget. Enter value above or equal to ₹%1$s.</string>
    <string name="you_have_not_created_the_budget_for_this_month">You have not created the budget for this month</string>
    <string name="categories_budget">Categories Budget</string>
    <string name="monthly_limit_money">Monthly Limit: ₹%1$s</string>
    <string name="date_created">Date Created: %1$s</string>
    <string name="template_already_exist">Template name already exists</string>
    <string name="reset_budget">Reset \u0020 </string>
    <string name="reset_heading">Reset Budget</string>
    <string name="reset_budget_msg">Are you sure you want to delete current budget setup?</string>
    <string name="channel_transaction">Transaction channel</string>
    <string name="channel_transaction_description">Channel for transaction notifications</string>
    <string name="cancel">Cancel</string>
    <string name="to_confirm_biometric">To confirm biometric</string>
    <string name="biometric_available">No biometric features available on this device.</string>
    <string name="biometric_unavailable">Biometric features are currently unavailable.</string>
    <string name="biometric_not_associated">The user hasn\'t associated any biometric credentials with their account.</string>
    <string name="to_login_biometric">To login</string>
    <string name="login_using_credentials">Login using credentials</string>
    <string name="retry">Retry</string>
    <string name="view_all">VIEW ALL</string>
    <string name="a_creative_solution_for_a_better_tomorrow">A creative solution for better tomorrow</string>
    <string name="budget_template">Budget Template</string>
    <string name="new_template">New Template</string>
    <string name="max_limit_rs">Max budget limit (₹)</string>
    <string name="add_template">Add Template</string>
    <string name="add_budget_template">Add Budget Template</string>
    <string name="maximum_budget_limit">Maximum Budget Limit</string>
    <string name="enable_biometrics">Enable Biometrics</string>
    <string name="notification">Notification</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="budget_templates">Budget Templates</string>
    <string name="delete_budget_templates">Delete</string>
    <string name="delete_budget_templates_msg">Are you sure you want to delete this template?</string>
    <string name="update_your_budget">Update Your Budget Limit</string>
    <string name="update_category_budget">Update %1$s\'s Budget</string>
    <string name="apply">Apply</string>
    <string name="templates">Templates</string>
    <string name="apply_template_msg">Are you sure you want to apply this template?</string>
    <string name="budget_template_created_msg">Budget Template created</string>
    <string name="no_templates_added">No Templates added</string>
    <string name="no_templates_categories_added">No Categories added \n\nAdd few category templates by clicking below.</string>
    <string name="i_have_read_all_the_terms_and_conditions">I accept all the Terms and Conditions for signing up and using this app. (Read) </string>
    <string name="accept">Accept</string>
    <string name="terms_and_conditions">Terms And Conditions</string>
    <string name="home_carousel_title">Monthly Dashboard</string>
    <string name="home_carousel_sub_title">Keep the track of your monthly finances</string>
    <string name="budget_carousel_title">Plan your budget</string>
    <string name="budget_carousel_sub_title">Don\'t let your expanses go out of hand</string>
    <string name="stats_carousel_title">Interactive Insights</string>
    <string name="stats_carousel_sub_title">Your monthly financial insight is now on your finger tips</string>
    <string name="profile_carousel_title">Your profile</string>
    <string name="profile_carousel_sub_title">You have the power to control your Ledger</string>
    <string name="budget_templates_carousel_title">Budget Templates</string>
    <string name="budget_templates_carousel_sub_title">Create once, use every month!!</string>
    <string name="category_carousel_title">Add your own categories</string>
    <string name="category_carousel_sub_title">Its your ledger, you own it</string>
    <string name="about_us">About Us</string>
    <string name="akhil_jain">Akhil Jain</string>
    <string name="meet_the_developers">Meet the developers</string>
    <string name="anant_raman">Anant Raman</string>
    <string name="anantraman_email">anantraman.india@gmail.com</string>
    <string name="about_us_message">We are a couple of working professionals who are passionate about mobile technologies.
        We have good experience in mobile android application development and this is our attempt to come up with a fine
        product to manage budget and finances for our customers.</string>
    <string name="akhilj33_email">akhilj33@gmail.com</string>
    <string name="email_subject">Regarding MobiLedger</string>
    <string name="email_body">Hello, I am a user of the MobiLedger App. I would like to bring your attention towards ...</string>
    <string name="next">Next</string>
    <string name="go_to_settings">Settings</string>
</resources>