<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--          HORIZONTAL GUIDELINES          -->

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/horizontalScreenGuideline_45"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.40" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/horizontalScreenGuideline_20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.20" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/horizontalScreenGuideline_90"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.90" />

        <!--          VERTICAL GUIDELINES          -->

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/verticalScreenGuideline_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.10" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/verticalScreenGuideline_90"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.90" />


        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbarLSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/app_name"
            android:background="@color/colorPrimaryDark"
            app:titleTextColor="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/mobi_ledger"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/horizontalScreenGuideline_20"
            app:layout_constraintStart_toStartOf="@id/verticalScreenGuideline_10"
            app:layout_constraintEnd_toEndOf="@id/verticalScreenGuideline_90"
            android:textSize="@dimen/sp_36"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tvHeading"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/join_a_creative_solution_for_a_better_tomorrow"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            app:layout_constraintStart_toStartOf="@id/verticalScreenGuideline_10"
            app:layout_constraintEnd_toEndOf="@id/verticalScreenGuideline_90"
            android:textSize="@dimen/sp_20"
            android:textAlignment="center" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/verticalScreenGuideline_90"
            app:layout_constraintStart_toStartOf="@id/verticalScreenGuideline_10"
            app:layout_constraintTop_toBottomOf="@id/horizontalScreenGuideline_45">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorPrimary"
                android:hint="@string/name"
                android:textSize="@dimen/sp_16" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/verticalScreenGuideline_90"
            app:layout_constraintStart_toStartOf="@id/verticalScreenGuideline_10"
            app:layout_constraintTop_toBottomOf="@id/nameInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorPrimary"
                android:hint="@string/email_id"
                android:textSize="@dimen/sp_16" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/verticalScreenGuideline_90"
            app:layout_constraintStart_toStartOf="@id/verticalScreenGuideline_10"
            app:layout_constraintTop_toBottomOf="@id/emailLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phoneEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorPrimary"
                android:hint="@string/mobile_no"
                android:textSize="@dimen/sp_16" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            app:layout_constraintEnd_toEndOf="@id/verticalScreenGuideline_90"
            app:layout_constraintStart_toStartOf="@id/verticalScreenGuideline_10"
            app:layout_constraintTop_toBottomOf="@id/phoneInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textPassword"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorPrimary"
                android:hint="@string/password"
                android:textSize="@dimen/sp_16" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirmPasswordLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            app:layout_constraintEnd_toEndOf="@id/verticalScreenGuideline_90"
            app:layout_constraintStart_toStartOf="@id/verticalScreenGuideline_10"
            app:layout_constraintTop_toBottomOf="@id/passwordLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textConfirmPassword"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorPrimary"
                android:hint="@string/confirm_password"
                android:textSize="@dimen/sp_16" />

        </com.google.android.material.textfield.TextInputLayout>

        <ProgressBar
            android:id="@+id/signUpProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnSignup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/sp_20"
            android:background="@color/colorPrimary"
            android:layout_marginTop="@dimen/dp_24"
            app:layout_constraintTop_toBottomOf="@id/confirmPasswordLayout"
            app:layout_constraintStart_toStartOf="@id/verticalScreenGuideline_10"
            app:layout_constraintEnd_toEndOf="@id/verticalScreenGuideline_90" />


        <include
            android:id="@+id/includeErrorView"
            layout="@layout/snack_view_error"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:visibility="visible" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>